# EDX_computer-graphics-uc-san-diegox-cse167x-3

./: .gitignore  CMakeLists.txt  Makefile  README.md  _docker_run.sh  build.sh  docker_build_image.sh  docker_build_project.sh  docker_run_bash.sh  docker_run_project.sh  generate_traces.sh  install_packages.sh  play_in_term_video.sh  record_traces.sh  run.sh  run_glfw3_sample.sh
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  mytest3
docker/: Dockerfile  install_packages.sh
shaders/: light.frag.glsl  light.vert.glsl
src/: geometry3.h  glfw3.cpp  mytest3.cpp  shaders.cpp  shaders.h
src/glfw3/: glfw3.cpp
